--- a/index.html
+++ b/index.html
@@ -78,8 +78,9 @@
 
     <div class="container con-1 col-sd-12 col-md-6-2 col-md-4-1 col-lg-3">
         <h3 class="zagf zag4">Зображення</h3>
-        <img src="320x240.gif"alt="image">
+        <img src="320x240.gif" alt="image">
     </div>
     <a href="https://place-hold.it/320x240">Посилання на зображення</a>
+    </div>
 </body>
 </html>
